<resources>
    <string name="app_name">ZipInstaller</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-2581158639472004/6218732979</string>
    <string name="version">v%1$s</string>
    <string name="loading">Loading&#8230;</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_text">ZipInstaller provides an easy way of flashing files to your device.\nThe author is not responsible for the damage that flashing this files can do to it.\nContinue at your own risk.\n\nTap anywhere to continue.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_add_zip">Add zip</string>
    <string name="menu_install">Install</string>
    <string name="menu_apply_rules">Apply rules</string>
    <string name="menu_install_recovery">Flash recovery</string>
    <string name="menu_install_boot">Flash boot</string>
    <string name="menu_add_rule">Add rule</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_cloud">Cloud</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_remove">Delete</string>
    <string name="menu_sync_up">Synchronize</string>
    <string name="menu_sync_down">Synchronize</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="requesting_su">Requesting superuser access&#8230;</string>
    <string name="initializing_ui">Initializing ui&#8230;</string>
    <string name="reading_storage_paths">Reading storage paths&#8230;</string>
    <string name="recovery_cwm_official">CWM official</string>
    <string name="recovery_cwm_based">CWM based</string>
    <string name="recovery_twrp">TWRP</string>
    <string name="recovery_4ext">4EXT</string>
    <string name="reading_recovery_info">Reading recovery info&#8230;</string>
    <string name="alert_changed_recovery_title">Recovery changed</string>
    <string name="alert_changed_recovery_message">Seems that you have changed your recovery from %1$s to %2$s.\nDo you want to configure your new recovery in ZipInstaller?</string>
    <string name="alert_changed_recovery_dont_show">Don\'t show this dialog again</string>
    <string name="recovery_alert_title">Select recovery</string>
    <string name="recovery_alert_summary">Specify the recovery you are using</string>
    <string name="recovery_changed">Recovery %1$s configured.</string>
    <string name="recovery_change_alert_title">Recovery found</string>
    <string name="recovery_change_alert_message">%1$s recovery found. Do you want to configure it as default?</string>
    <string name="backup">Backup</string>
    <string name="wipe_system">Wipe System</string>
    <string name="wipe_data">Wipe Data</string>
    <string name="wipe_caches">Wipe Cache &amp; Dalvik</string>
    <string name="fix_permissions">Fix permissions</string>
    <string name="alert_restore_title">Restore</string>
    <string name="alert_restore_message">Restore backup?\n%1$s</string>
    <string name="alert_backup_space_title">Space left</string>
    <string name="alert_backup_space_message">There\'s less than %1$sGB in the internal sdcard. Do you want to continue with the backup?</string>
    <string name="alert_backup_title">Backup</string>
    <string name="alert_backup_message">Reboot to recovery and backup</string>
    <string name="alert_backup_message_onandroid">Start onandroid backup</string>
    <string name="alert_backup_name">Specify a name for the backup</string>
    <string name="alert_backup_message2">Illegal characters will be removed</string>
    <string name="alert_backup_actions">Select an action.</string>
    <string name="system">System</string>
    <string name="data">Data</string>
    <string name="cache">Cache</string>
    <string name="recovery">Recovery</string>
    <string name="boot">Boot</string>
    <string name="androidsecure">Android secure</string>
    <string name="sdext">SD-Ext</string>
    <string name="alert_reboot_title">Select actions and install</string>
    <string name="alert_reboot_now">Install now</string>
    <string name="alert_wipe_system_title">System wipe</string>
    <string name="alert_wipe_system_message">You are about to perform a system wipe. Are you sure you want to do that?</string>
    <string name="alert_file_exists_checking">Checking file %1$s&#8230;</string>
    <string name="alert_file_not_exists">File not found: %1$s</string>
    <string name="alert_file_md5_checking">Checking MD5 for file %1$s&#8230;</string>
    <string name="alert_file_incorrect_md5_file">Malformed MD5 file: %1$s</string>
    <string name="alert_file_incorrect_md5">Mismatch MD5 for file %1$s</string>
    <string name="alert_file_alert">Alert</string>
    <string name="alert_file_checking">Checking files&#8230;</string>
    <string name="use_onandroid">Use ONandroid</string>
    <string name="checking_license">Checking license&#8230;</string>
    <string name="not_licensed_title">Not licensed</string>
    <string name="not_licensed_text">You have not purchased the application. Please go to the Play Store and buy it.</string>
    <string name="not_licensed_retry_title">License error</string>
    <string name="not_licensed_retry_text">Could not check your license in the Play Store. Please try again later.</string>
    <string name="not_licensed_exit">Close app</string>
    <string name="consider_becoming_a_pro">Please consider purchasing the application</string>
    <string name="check_for_updates_error">Error checking for updates</string>
    <string name="no_new_version">No updates found</string>
    <string name="new_version_title">New update found</string>
    <string name="new_version_summary">%1$s found. Do you want to download and install it now?</string>
    <string name="new_version_download">Download &amp; install</string>
    <string name="check_rom_updates_no_new">No ROM updates found</string>
    <string name="check_rom_updates_error">Error checking for ROM updates</string>
    <string name="new_rom_found_title">New ROM version found</string>
    <string name="new_rom_found_summary">A new version of your ROM has been found. Do you want to download it now?\n\n%1$s\n</string>
    <string name="new_rom_name">%1$s</string>
    <string name="install_title">Install</string>
    <string name="flashboot_installed">Boot image installed</string>
    <string name="recovery_fragment_title">Recovery</string>
    <string name="recovery_fragment_backup_title">Backup</string>
    <string name="recovery_fragment_backup_summary">Backup your rom</string>
    <string name="recovery_fragment_restore_title">Restore</string>
    <string name="recovery_fragment_restore_summary">Restore a previous backup</string>
    <string name="recovery_fragment_delete_title">Delete</string>
    <string name="recovery_fragment_delete_summary">Delete a previous backup</string>
    <string name="recovery_fragment_wipe_data">Wipe data</string>
    <string name="recovery_fragment_wipe_data_summary">Reboot into recovery and wipe data</string>
    <string name="recovery_fragment_wipe_caches">Wipe cache &amp; dalvik</string>
    <string name="recovery_fragment_wipe_caches_summary">Reboot into recovery and wipe cache and dalvik cache</string>
    <string name="recovery_fragment_fix_permissions">Fix permissions</string>
    <string name="recovery_fragment_fix_permissions_summary">Reboot into recovery and fix permissions</string>
    <string name="recovery_fragment_reboot_title">Reboot into recovery</string>
    <string name="goo_title">Navigate goo</string>
    <string name="navigating_folder">Navigating folder %1$s</string>
    <string name="only_compatible">Only compatible ROMs</string>
    <string name="settings_recovery">Recovery</string>
    <string name="recovery_title">Select recovery</string>
    <string name="recovery_summary">Select the recovery intalled in your device</string>
    <string name="internalsdcard_title">Internal storage path</string>
    <string name="internalsdcard_summary">Specify the internal storage path used by the recovery</string>
    <string name="externalsdcard_title">External storage path</string>
    <string name="externalsdcard_summary">Specify the external storage path used by the recovery</string>
    <string name="force_datamedia_title">Use /data/media/</string>
    <string name="force_datamedia_summary">Check this option if your CWM recovery uses /data/media/ to store backups</string>
    <string name="force_extsdcard_mount_title">Force external sdcard mount</string>
    <string name="force_extsdcard_mount_summary">Check this option if your CWM recovery doesn\'t mount external sdcard by default</string>
    <string name="backup_external_title">Backup and restore in external sdcard</string>
    <string name="backup_external_summary">Check this option if you want to backup your rom in your external sdcard</string>
    <string name="settings_showoptions_title">Options</string>
    <string name="settings_showoptions_summary">Chose options to show when pressing the Install button</string>
    <string name="settings_security">Security</string>
    <string name="settings_checkexists_title">Check zip files</string>
    <string name="settings_checkexists_summary">Check whether zip files exists or not before flashing</string>
    <string name="settings_checkmd5_title">Check MD5</string>
    <string name="settings_checkmd5_summary">Check MD5 if a md5sum file is present before flashing</string>
    <string name="spaceleft_title">Check space before backup</string>
    <string name="spaceleft_summary">Display alert when doing a backup and there\'s less space than&#8230;</string>
    <string name="settings_wipesystem_alert_title">Wipe system alert</string>
    <string name="settings_wipesystem_alert_summary">Show a confirmation dialog if trying to do a system wipe</string>
    <string name="checkroot_title">Check root</string>
    <string name="checkroot_summary">Check if root access is well configured in your device</string>
    <string name="settings_interface">Interface</string>
    <string name="usefolder_title">Install button opens folder</string>
    <string name="usefolder_summary">If checked, the application will open a folder\'s content instead of a file manager.</string>
    <string name="folder_title">Default folder</string>
    <string name="dad_title">Drag &amp; drop</string>
    <string name="dad_summary">Use drag &amp; drop to reorder the list</string>
    <string name="zipposition_title">Zip position</string>
    <string name="zipposition_summary">Position to add the new zip files added to the list</string>
    <string name="settings_theme_title">Use dark theme</string>
    <string name="settings_theme_summary">Use dark theme instead of holo light</string>
    <string name="settings_update">Updates</string>
    <string name="download_path">Download path</string>
    <string name="check_for_updates_startup_title">Check on startup</string>
    <string name="check_for_updates_startup_summary">Check for ZipInstaller updates when the app is launched</string>
    <string name="checktime_title">Update check frequency</string>
    <string name="check_rom_updates">Check for ROM updates</string>
    <string name="about_title">About</string>
    <string name="about_zip_title">ZipInstaller</string>
    <string name="about_zip_summary" translatable="false">http://forum.xda-developers.com/showthread.php?t=1920057</string>
    <string name="about_version_title">Version</string>
    <string name="license_title">License</string>
    <string name="license_apache_title">GPL v3 License</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_apache_title">Changes in ZipInstaller</string>
    <string name="checkforupdates_title">Check for updates</string>
    <string name="donate_title">Donate</string>
</resources>