<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 ZipInstaller

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/about_title">

        <Preference
            android:title="@string/about_zip_title"
            android:summary="@string/about_zip_summary"
            android:key="about_pref" />
        
        <Preference
            android:title="@string/about_version_title"
            android:key="about_version" />
        
        <Preference 
            android:title="@string/changelog_title"
            android:summary="@string/changelog_apache_title"
            android:key="changelog_pref"/>
        
        <Preference 
            android:title="@string/license_title"
            android:summary="@string/license_apache_title"
            android:key="license_pref"/>

    </PreferenceCategory>

</PreferenceScreen>