<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/backup_dialog_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_backup_message" />

    <CheckBox
        android:id="@+id/system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/system" />

    <CheckBox
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/data" />

    <CheckBox
        android:id="@+id/cache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/cache" />

    <CheckBox
        android:id="@+id/recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovery" />

    <CheckBox
        android:id="@+id/boot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boot" />

    <CheckBox
        android:id="@+id/androidsecure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidsecure" />

    <CheckBox
        android:id="@+id/sdext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdext" />

    <EditText
        android:id="@+id/backupname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>