<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 ZipInstaller Project

  This file is part of ZipInstaller.

  ZipInstaller is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  ZipInstaller is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with ZipInstaller.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.beerbong.zipinst"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/goo_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="20dp"
    tools:context=".MainActivity" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <Switch
            android:id="@+id/switch_compatible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/only_compatible" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goo_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?fragmentTitleColor"
            android:textSize="@dimen/fragment_title_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="2dp"
            android:background="?fragmentTitleColor" />

        <TextView
            android:id="@+id/navigating_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/navigating_folder"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <com.mobeta.android.dslv.DragSortListView
            android:id="@+id/file_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"
            app:drag_enabled="false"
            app:remove_enabled="false"
            app:float_background_color="?buttonItemDownColor" />

    </LinearLayout>
    
</LinearLayout>